--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/pom.xml
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/pom.xml
@@ -70,6 +70,12 @@
 
         </plugins>
     </build>
+    <distributionManagement>
+    <repository>
+             <id>Maven</id>
+             <url>http://13.56.234.188:8081/repository/Maven/</url>
+    </repository>
+    </distributionManagement>
 
 
 </project>
